--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: The title of your Semesterproject
-subtitle: A subtle subtitle
-author: Firstname1 Lastname1 and Firstname2 Lastname2
+title: Have I gotten faster?
+subtitle: An analysis of Mountainbiking Data
+author: Annika Hirsch
 format:
   html:
     code-fold: true
@@ -20,9 +20,11 @@ bibliography: bibliography.bib
 
 ## Abstract
 
+Just testing and checking if it works. 
+
 ## Introduction
 
-@laube2011 investigate how temporal scale affects the calculation of movement parameters (speed, sinuosity and turning angle) of animal trajectories. 
+
 
 ## Material and Methods
 
