still not done and will keep working on it for myself

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,15 +1,56 @@
 
-You can add more bibtex entries from google scholar to this file and 
-cite these in your document. See:
-https://texblog.org/2014/04/22/using-google-scholar-to-download-bibtex-citations/
+@article{laube_how_2011,
+	title = {How fast is a cow? {Cross}-scale analysis of movement data},
+	volume = {15},
+	number = {3},
+	journal = {Transactions in GIS},
+	author = {Laube, Patrick and Purves, Ross S},
+	year = {2011},
+	note = {Publisher: Wiley Online Library},
+	pages = {401--418},
+}
 
-@article{laube2011,
-  title={How fast is a cow? Cross-scale analysis of movement data},
-  author={Laube, Patrick and Purves, Ross S},
-  journal={Transactions in GIS},
-  volume={15},
-  number={3},
-  pages={401--418},
-  year={2011},
-  publisher={Wiley Online Library}
+@article{wolf_use_2015,
+	title = {The use of public participation {GIS} ({PPGIS}) for park visitor management: {A} case study of mountain biking},
+	volume = {51},
+	issn = {02615177},
+	shorttitle = {The use of public participation {GIS} ({PPGIS}) for park visitor management},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0261517715000989},
+	doi = {10.1016/j.tourman.2015.05.003},
+	language = {en},
+	urldate = {2024-06-24},
+	journal = {Tourism Management},
+	author = {Wolf, Isabelle D. and Wohlfart, Teresa and Brown, Greg and Bartolomé Lasa, Abraham},
+	month = dec,
+	year = {2015},
+	pages = {112--130},
+}
+
+@article{nogueira_mendes_squeezing_2023,
+	title = {Squeezing the most from volunteered geographic information to monitor mountain biking in peri-urban protected and recreational areas at a metropolitan scale},
+	volume = {42},
+	issn = {22130780},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S2213078023000191},
+	doi = {10.1016/j.jort.2023.100624},
+	language = {en},
+	urldate = {2024-06-24},
+	journal = {Journal of Outdoor Recreation and Tourism},
+	author = {Nogueira Mendes, Ricardo M. and Farías-Torbidoni, Estela Inés and Da Silva, Carlos Pereira},
+	month = jun,
+	year = {2023},
+	pages = {100624},
+}
+
+@article{hurst_gps-based_2013,
+	title = {{GPS}-{Based} {Evaluation} of {Activity} {Profiles} in {Elite} {Downhill} {Mountain} {Biking} and the {Influence} of {Course} {Type}},
+	volume = {2},
+	url = {https://jsc-journal.com/index.php/JSC/article/view/31},
+	abstract = {\&lt;span style=\&quot;font-family: Times New Roman; font-size: small;\&quot;\&gt; \&lt;/span\&gt;\&lt;p\&gt;This study aimed to profile the activity patterns of elite downhill (DH) mountain bikers during off-road descending, and to determine the influence of course types on activity patterns. Six male elite DH mountain bikers (age 20 ± 2 yrs; stature 178.8 ± 3.1 cm; body mass 75.0 ± 3.0 kg) performed single runs on one man-made (MM) and one natural terrain (NT) DH courses under race conditions. A 5 Hz global positioning systems (GPS) unit, including a 100 Hz triaxial accelerometer, was positioned in a neoprene harness between the C7 and T2 vertebrae on each rider. GPS was used to determine the temporal characteristics of each run for velocity, run time, distance, effort, heart rate (HR), rider load (RLd) which reflects instantaneous rate of change in acceleration, and accumulated rider load (RLdAcc), which reflects change in acceleration over the event duration. Significant differences were found between NT and MM courses for mean velocity (p\&amp;lt;.001), peak velocity (p=.014), mean RLd (p=.001) and peak RLd (p=.002). Significant differences were also found both within and between courses for all velocity parameters, when analysed by intensity zone (p\&amp;lt;.05). No significant differences were found between courses for HR parameters by zone, though significant differences were revealed between HR zones within courses (p\&amp;lt;.05). This study indicates that course terrain has a significant impact on the activity profiles of DH and that GPS can provide a practical means of monitoring these differences in activity.\&lt;/p\&gt;\&lt;p class=\&quot;MsoNormal\&quot; style=\&quot;margin: 0cm 0cm 10pt; text-align: justify; line-height: 200\%;\&quot;\&gt; \&lt;/p\&gt;\&lt;span style=\&quot;font-family: Times New Roman; font-size: small;\&quot;\&gt; \&lt;/span\&gt;},
+	number = {1},
+	urldate = {2024-06-24},
+	journal = {Journal of Science and Cycling},
+	author = {Hurst, Howard Thomas and Swarén, Mikael and Hébert-Losier, Kim and Ericsson, Fredrik and Sinclair, Jonathan and Atkins, Stephen and Homlberg, Hans-Christer},
+	month = jun,
+	year = {2013},
+	pages = {25--32},
 }
